--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Naughts and Crosses</title>
+    <title>Naughts and Crosses - Please play me</title>
 </head>
 <body>
     <div class="container">
-        <h1>Naughts and Crosses</h1>
+        <h1>Naughts and Crosses - Please play me</h1>
+        <h2>Rules</h2>
+        <p>
+            Naughts and Crosses (also known as Tic-Tac-Toe) is a simple two-player game. The game board consists of a 3x3 grid. Players take turns to place their marker (X or O) in an empty cell. The player who succeeds in placing three of their markers in a horizontal, vertical, or diagonal row wins the game.
+        </p>
+        <p>
+            To win:
+            <ul>
+                <li>Complete a horizontal row.</li>
+                <li>Complete a vertical column.</li>
+                <li>Complete a diagonal line.</li>
+            </ul>
+        </p>
+        <p>
+            To play, click on an empty cell to place your marker. The game will alternate between "X" and "O." The result of the game (win, draw, or ongoing) will be displayed below the game board. You can reset the game at any time by clicking the "Reset Game" button.
+        </p>
         <div id="board" class="board">
             <div class="cell" onclick="placeMarker(this)"></div>
             <div class="cell" onclick="placeMarker(this)"></div>
